--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,11 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title><%= title %></title>
+  <title>Fitness Tracker</title>
 </head>
 <body>
-    <nav>
-        
-    </nav>
-    <main>
-        <h1><%= title %></h1>
+  <nav>
+    <a href="/">Home</a>
+    &nbsp;|&nbsp;
+    <a href="/fitnessTrackers/new">New Trackers</a>
+    &nbsp;|&nbsp;
+    <a href="/fitnessTrackers">All Trackers</a>
+  </nav>
+  </body>
