trying to get columns

--- a/views/fitnessTrackers/index.ejs
+++ b/views/fitnessTrackers/index.ejs
@@ -2,10 +2,10 @@
     <h1>List of Trackers </h1>
     <table class="table" id="tracker-index">
         <thead>
-            <th scope="col">Pushups</th>
+            <th scope="row">Pushups</th>
             <th scope="col">Pullups</th>
             <th scope="col">Situps</th>
-            <th scope="col">Jumping Jacks</th>
+            <th>Jumping Jacks</th>
         </thead>
         <tbody>
            
