--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,7 +5,7 @@
 body {
 	font-size: 14px;
 	font-family: 'Pixelify Sans', sans-serif;
-    background: url("public/images/Jt3jsKc.jpg");
+    background-image: url("public/images/Jt3jsKc.jpg");
     background-size: cover;
 	color: rgb(36, 36, 36);
 }
