--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,5 +14,9 @@
     <a href="/fitnessTrackers/new">New Trackers</a>
     &nbsp;|&nbsp;
     <a href="/fitnessTrackers">All Trackers</a>
+    <% if (user) { %>
+      <% } else { %>
+        <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+      <% } %>
   </nav>
   </body>
