--- a/views/fitnessTrackers/show.ejs
+++ b/views/fitnessTrackers/show.ejs
@@ -1,18 +1,6 @@
 <%- include('../partials/header') %>  
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+<a href="/fitnessTrackers/<%= fitnessTracker.id %>/edit">Edit trackers</a>
 
 
 <%- include('../partials/footer') %>
