--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title>Fitness Tracker</title>
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel='stylesheet' href='/stylesheets/style.css'/>
+  <script src="/js/jquery.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+    <title>Fitness Tracker</title>
 </head>
 <body>
   <nav>
@@ -16,7 +19,6 @@
     <a href="/fitnessTrackers">All Trackers</a>
     <% if (user) { %>
       <% } else { %>
-        <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+        <a href="/auth/google" class="login">LOG IN&nbsp;<img src="../images/google_logo.png" height="30px" width="30px"></a>
       <% } %>
   </nav>
-  </body>
