--- a/views/fitnessTrackers/index.ejs
+++ b/views/fitnessTrackers/index.ejs
@@ -9,7 +9,7 @@
         </thead>
         <tbody>
            <% indexTrackers.forEach(function(indexTrackers) { %>
-            <tr>
+            <tr class="tablebody">
                 <td><%= indexTrackers.pushups %></td>
                 <td><%= indexTrackers.pullups %></td>
                 <td><%= indexTrackers.situps %></td>
