--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,7 @@
 
 
 body {
-	font-size: 14px;
+	font-size: 30px;
 	font-family: 'Pixelify Sans', sans-serif;
     background-image: url("../images/Jt3jsKc.jpg");
     background-size: cover;
@@ -16,22 +16,35 @@ h1 {
 	font-weight: 700;
 	padding: 20px 0 20px 0;
 }
-td {
-text-align: center;
-}
+
+
 #tracker-index {
-	text-align: center;
-}
+display: flex;
+justify-content: center; 
+align-items: center;
+flex-direction: column;}
 a {
 	
 	color: black;
 }
 
-main {
-	
+.tablebody {
+
 	display: flex;
-	flex-direction: column;
+	justify-content: space-evenly;
+}
+
+td {
+	margin: 50px;
+}
+
+.login {
+	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 100vw;
-}
+	height: 34px;
+  }
+  
+  .login img {
+	height: 30px;
+  }
