--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Pixelify+Sans:wght@500&display=swap');
 
 
 body {
 	font-size: 30px;
-	font-family: 'Pixelify Sans', sans-serif;
+	font-family: 'Orbitron', 'Pixelify Sans', sans-serif;
     background-image: url("../images/Jt3jsKc.jpg");
     background-size: cover;
 	background-repeat: no-repeat;
@@ -35,7 +34,7 @@ a {
 }
 
 td {
-	margin: 50px;
+	margin: 60px;
 }
 
 .login {
