--- a/views/fitnessTrackers/index.ejs
+++ b/views/fitnessTrackers/index.ejs
@@ -1,11 +1,12 @@
 <%- include('../partials/header.ejs') %>
+<% if (user) { %>
     <h1>List of Trackers </h1>
     <table class="table" id="tracker-index">
         <thead>
-            <th>Pushups</th>
-            <th>Pullups</th>
-            <th>Situps</th>
-            <th>Jumping Jacks</th>
+            <th>Pushups\/</th>
+            <th>Pullups\/</th>
+            <th>Situps\/</th>
+            <th>JumpingJacks</th>
         </thead>
         <tbody>
            <% indexTrackers.forEach(function(indexTrackers) { %>
@@ -27,4 +28,7 @@
     <div id="add-fitnessTracker">
         <a href="/fitnessTrackers/new">Add a tracker</a>
     </div>
+    <% } else { %>
+    <h1>Welcome to my Progress Tracker</h1>   
+    <% } %>
 <%- include('../partials/footer.ejs') %>
